changed login,homepage design. added category filtering.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#af3d56</color>
-    <color name="colorPrimaryDark">#af3d56</color>
-    <color name="colorPrimaryDarker">#af3d56</color>
+    <color name="colorPrimary">@color/moderate_cyan</color>
+    <color name="colorPrimaryDark">@color/strong_cyan</color>
+    <color name="colorPrimaryDarker">@color/strong_cyan</color>
     <color name="colorAccent">#FFFFFF</color>
 
     <color name="green">#00FF00</color>
@@ -14,7 +14,23 @@
     <color name="dark_moderate_violet">#8E44AD</color>
     <color name="strong_red">#C0392B</color>
     <color name="basic_red">#FF0000</color>
+    <color name="strong_cyan">#06beb6</color>
+    <color name="moderate_cyan">#48b1bf</color>
 
     <color name="login_inputs_color">#af3d56</color>
     <color name="sfl_placeholder">#8a000000</color>
+
+    <array name="colors">
+        <item name="all" type="color">#827f93</item>
+        <item name="design" type="color">#c467f4</item>
+        <item name="ios" type="color">#3b9aee</item>
+        <item name="android" type="color">#9bc53d</item>
+        <item name="web" type="color">#f4a261</item>
+        <item name="business" type="color">#1ed2bb</item>
+        <item name="research" type="color">#778da9</item>
+        <item name="sales" type="color">#20bf55</item>
+        <item name="quality" type="color">#9f9fed</item>
+        <item name="customer" type="color">#fc6177</item>
+        <item name="other" type="color">#bcbcbc</item>
+    </array>
 </resources>
