--- a/app/src/main/res/drawable/background_image_gradient.xml
+++ b/app/src/main/res/drawable/background_image_gradient.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="@color/strong_red"
-                android:endColor="@color/dark_moderate_violet"
+                android:startColor="@color/strong_cyan"
+                android:endColor="@color/moderate_cyan"
                 android:type="linear" />
         </shape>
     </item>
