--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:float="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     android:background="@drawable/background_image_gradient">
 
@@ -24,31 +25,25 @@
             android:layout_marginBottom="40dp"
             android:layout_gravity="center_horizontal"/>
 
-        <EditText
-            android:id="@+id/txtLoginEmailOrUsername"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/login_email_input_hint"
-            android:background="@drawable/rounded_inputs"
-            android:padding="15dp"
-            android:textColor="@color/login_inputs_color"
-            android:textColorHint="@color/login_inputs_color"
-            android:textColorHighlight="@color/login_inputs_color"
-            android:layout_marginBottom="20dp"/>
+            android:layout_height="wrap_content">
+            <EditText android:id="@+id/frmLoginAccount_txtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="Email Address" />
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/txtLoginPassword"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="@string/password_input_hint"
-            android:background="@drawable/rounded_inputs"
-            android:padding="15dp"
-            android:textColor="@color/login_inputs_color"
-            android:textColorHint="@color/login_inputs_color"
-            android:textColorHighlight="@color/login_inputs_color"
-            android:layout_marginBottom="20dp"/>
+            android:layout_height="wrap_content">
+            <EditText android:id="@+id/frmLoginAccount_txtPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Password"/>
+        </android.support.design.widget.TextInputLayout>
 
         <com.github.nikartm.support.StripedProcessButton
             android:id="@+id/btnLoginUser"
@@ -63,7 +58,7 @@
             app:spb_stripeGradient="false"
             app:spb_stripeWidth="20dp"
             app:spb_stripeTilt="35"
-            app:spb_background="@color/dark_moderate_violet"
+            app:spb_background="@color/colorPrimaryDark"
             app:spb_mainStripColor="#212121"
             app:spb_subStripeColor="#ffffff"
             app:spb_stripeDuration="120"
@@ -78,7 +73,8 @@
             android:text="@string/forgot_password_button"
             android:gravity="center"
             android:textSize="18sp"
-            android:textColor="@color/pure_yellow"/>
+            android:textStyle="bold"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
     <LinearLayout
