--- a/app/src/main/res/drawable/rounded_buttons.xml
+++ b/app/src/main/res/drawable/rounded_buttons.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/dark_moderate_violet"/>
+            <solid android:color="@color/very_dark_cyan"/>
             <corners android:radius="10dp"/>
             <!-- You can create different radius for different corners -->
             <!--corners
