Changed toolbar design. Changed homepage,talent profile design/background. Remove all categories in filtering.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#E4E6E3">
+        android:background="@drawable/background_home">
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeToRefresh_talents"
