--- a/app/src/main/res/layout/talents_list.xml
+++ b/app/src/main/res/layout/talents_list.xml
@@ -15,6 +15,7 @@
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
+        android:alpha="0.7"
         card_view:cardCornerRadius="4dp">
 
         <RelativeLayout
