--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,40 +7,223 @@
     android:layout_height="match_parent"
     tools:context=".activities.HomeActivity">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background_home">
+        android:layout_height="match_parent">
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipeToRefresh_talents"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:background="@drawable/background_home">
 
-            <cz.kinst.jakub.view.SimpleStatefulLayout
-                android:id="@+id/stateful_layout"
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipeToRefresh_talents"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:emptyLayout="@layout/state_empty"
-                app:offlineLayout="@layout/state_offline"
-                app:progressLayout="@layout/state_progress">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="110dp">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerView_talents"
+                <cz.kinst.jakub.view.SimpleStatefulLayout
+                    android:id="@+id/stateful_layout"
                     android:layout_width="match_parent"
-                    android:layout_above="@+id/bottomNavigationView"
                     android:layout_height="match_parent"
-                    android:scrollbars="vertical"
-                    android:layout_marginTop="@dimen/container_height"/>
+                    app:emptyLayout="@layout/state_empty"
+                    app:offlineLayout="@layout/state_offline"
+                    app:progressLayout="@layout/state_progress">
 
-            </cz.kinst.jakub.view.SimpleStatefulLayout>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerView_talents"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scrollbars="vertical" />
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+                </cz.kinst.jakub.view.SimpleStatefulLayout>
 
-        <com.yalantis.filter.widget.Filter
-            android:id="@+id/filter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            </android.support.v4.widget.SwipeRefreshLayout>
 
-    </FrameLayout>
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="vertical">
+
+                <com.github.florent37.expansionpanel.ExpansionHeader
+                    android:id="@+id/expansionHeader"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    app:expansion_headerIndicator="@id/headerIndicator"
+                    app:expansion_layout="@id/expansionLayout"
+                    app:expansion_toggleOnClick="true"
+                    android:background="@color/white">
+
+                    <RelativeLayout
+                        android:background="@android:color/white"
+                        android:layout_height="48dp"
+                        android:layout_width="match_parent"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp">
+
+                        <!-- HEADER -->
+
+                        <TextView
+                            android:layout_centerVertical="true"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="Filtering"
+                            android:textSize="18dp"
+                            android:textColor="#3E3E3E" />
+
+                        <TextView
+                            android:layout_centerVertical="true"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="120dp"
+                            android:layout_width="wrap_content"
+                            android:text="Height,Age,Talent Fee &amp; Location"
+                            android:textColor="#AAA" />
+
+                        <!-- HEADER INDICATOR -->
+                        <android.support.v7.widget.AppCompatImageView
+                            android:adjustViewBounds="true"
+                            android:id="@+id/headerIndicator"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_width="wrap_content"
+                            app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />
+
+                    </RelativeLayout>
+
+                </com.github.florent37.expansionpanel.ExpansionHeader>
+
+                <com.github.florent37.expansionpanel.ExpansionLayout
+                    android:id="@+id/expansionLayout"
+                    app:expansion_expanded="false"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:background="#EEE"
+                    android:padding="10dp">
+
+                    <LinearLayout
+                        android:id="@+id/container"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:orientation="vertical">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText android:id="@+id/frmFiltering_height"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="text"
+                                android:hint="Height (in ft.)" />
+
+                        </android.support.design.widget.TextInputLayout>
+
+                        <TextView
+                            android:gravity="center"
+                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_marginTop="5dp"
+                            android:textSize="18dp"
+                            android:textStyle="bold"
+                            android:text="Age:" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:clipChildren="false">
+
+                            <com.crystal.crystalrangeseekbar.widgets.BubbleThumbRangeSeekbar
+                                android:id="@+id/frmFiltering_ageRange"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                app:corner_radius="10"
+                                app:min_value="18"
+                                app:steps="12"
+                                app:max_value="30"
+                                app:bar_color="#F7BB88"
+                                app:bar_highlight_color="#E07416"
+                                app:left_thumb_image="@drawable/thumb"
+                                app:right_thumb_image="@drawable/thumb"
+                                app:left_thumb_image_pressed="@drawable/thumb_pressed"
+                                app:right_thumb_image_pressed="@drawable/thumb_pressed"
+                                app:data_type="_integer"/>
+
+                            <TextView
+                                android:id="@+id/ageRange_min"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="18"
+                                android:layout_below="@id/frmFiltering_ageRange"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginStart="10dp"
+                                android:textSize="16dp"
+                                android:textColor="#000"/>
+
+                            <TextView
+                                android:id="@+id/ageRange_max"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="30"
+                                android:layout_below="@id/frmFiltering_ageRange"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginEnd="10dp"
+                                android:textSize="16dp"
+                                android:textColor="#000"
+                                android:layout_alignParentEnd="true"/>
+
+                        </RelativeLayout>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText android:id="@+id/frmFiltering_talentFee"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="textCapWords"
+                                android:hint="Talent Fee" />
+
+                        </android.support.design.widget.TextInputLayout>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText android:id="@+id/frmFiltering_location"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="textCapWords"
+                                android:hint="Location" />
+
+                        </android.support.design.widget.TextInputLayout>
+
+                        <android.support.v7.widget.AppCompatButton
+                            android:id="@+id/btnFilteringSearch"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:background="@drawable/rounded_buttons"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="20dp"
+                            android:text="SEARCH"
+                            android:textSize="15sp"
+                            android:textColor="@color/white"/>
+
+                    </LinearLayout>
+
+                </com.github.florent37.expansionpanel.ExpansionLayout>
+
+                <com.yalantis.filter.widget.Filter
+                    android:id="@+id/filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
