--- a/app/src/main/res/layout/activity_talent_details.xml
+++ b/app/src/main/res/layout/activity_talent_details.xml
@@ -64,7 +64,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imgTalentProfilePicture" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/lblTalentCategories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -88,7 +88,7 @@
             app:srcCompat="@drawable/ic_attach_money_black"
             tools:ignore="VectorDrawableCompat" />
 
-        <TextView
+        <org.sufficientlysecure.htmltextview.HtmlTextView
             android:id="@+id/lblTalentFee"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -129,7 +129,7 @@
             app:layout_constraintVertical_bias="0.52"
             tools:ignore="SmallSp" />
 
-        <TextView
+        <org.sufficientlysecure.htmltextview.HtmlTextView
             android:id="@+id/lblTalentDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
